# VIPER

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  viper.yaml.example
src/viper/: __init__.py  cli.py  config.py  fixer.py  gitlab_integration.py  orchestrator.py  report_generator.py
src/viper/agent/: __init__.py  loop.py  prompts.py  schemas.py  tools.py
src/viper/models/: __init__.py  code_issue.py  result.py  vulnerability.py
src/viper/parsers/: __init__.py  snyk_code_parser.py  snyk_parser.py
tests/: conftest.py  test_cli.py  test_config.py  test_fixer.py  test_orchestrator.py  test_snyk_parser.py  test_tools.py
tests/fixtures/: snyk_report_maven.json  snyk_report_npm.json  snyk_report_python.json
tests/fixtures/sample_projects/java_project/: pom.xml
tests/fixtures/sample_projects/node_project/: package.json
tests/fixtures/sample_projects/python_project/: requirements.txt
