[project]
name = "viper"
version = "0.1.0"
description = "VIPER — Vulnerability Identification, Patching & Evaluation Robot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "litellm>=1.40.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.scripts]
viper = "viper.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
